# gr-osmosdr

./: .gitignore  AUTHORS  CMakeLists.txt  MANIFEST.md  README  README.md  gnuradio-osmosdr.pc.in  test_find.cmake
apps/: CMakeLists.txt  osmocom_fft  osmocom_siggen  osmocom_siggen_base.py  osmocom_siggen_gui  osmocom_siggen_nogui  osmocom_spectrum_sense  osmosdr_source.grc  osmosdr_source.py  osmosdr_source_1rtl.grc  osmosdr_source_2rtl.grc  osmosdr_source_multi.grc
cmake/Modules/: FindGnuradioAudio.cmake  FindGnuradioCore.cmake  FindGnuradioFCD.cmake  FindGnuradioFCDPP.cmake  FindGnuradioFuncube.cmake  FindGnuradioIQBalance.cmake  FindGnuradioUHD.cmake  FindLibAIRSPY.cmake  FindLibAIRSPYHF.cmake  FindLibFreeSRP.cmake  FindLibHYDRASDR.cmake  FindLibHackRF.cmake  FindLibOsmoPluto.cmake  FindLibOsmoSDR.cmake  FindLibXTRX.cmake  FindLibbladeRF.cmake  GrSwig.cmake  GrVersion.cmake  OsmoSDRMiscUtils.cmake  osmosdrConfig.cmake
debian/: changelog  control  copyright  gr-osmosdr.install  gr-osmosdr.manpages  osmocom_fft.1  osmocom_siggen.1  osmocom_siggen_nogui.1  osmocom_spectrum_sense.1  rules  watch
docs/: CMakeLists.txt
docs/doxygen/: CMakeLists.txt  Doxyfile.in  swig_doc.py
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
grc/: CMakeLists.txt  gen_airspyhf_blocks.py  gen_osmosdr_blocks.py  osmosdr_block_tree.xml  osmosdr_sink_c.xml  osmosdr_source_c.xml  wx_gain_panel.xml
include/osmosdr/: CMakeLists.txt  api.h  device.h  osmosdr_api.h  osmosdr_device.h  osmosdr_pimpl.h  osmosdr_ranges.h  osmosdr_sink_c.h  osmosdr_source_c.h  pimpl.h  ranges.h  sink.h  source.h  time_spec.h
include/osmosdr/runtime/: CMakeLists.txt
include/osmosdr/runtime/gnuradio/: basic_block.h  block.h  block_detail.h  block_gateway.h  block_registry.h  buffer.h  feval.h  flowgraph.h  hier_block2.h  logger.h  logger.h.in  tpb_detail.h
lib/: CMakeLists.txt  ConfigChecks.cmake  arg_helpers.h  config.h.in  device.cc  osmosdr_arg_helpers.h  osmosdr_device.cc  osmosdr_ranges.cc  osmosdr_sink_c_impl.cc  osmosdr_sink_c_impl.h  osmosdr_snk_iface.h  osmosdr_source_c_impl.cc  osmosdr_source_c_impl.h  osmosdr_src_iface.h  ranges.cc  rtl_source_c.cc  rtl_source_c.h  sink_iface.h  sink_impl.cc  sink_impl.h  source_iface.h  source_impl.cc  source_impl.h  time_spec.cc
lib/airspy/: CMakeLists.txt  airspy_source_c.cc  airspy_source_c.h  airspy_wrapper.h
lib/airspyhf/: CMakeLists.txt  airspyhf_source_c.cc  airspyhf_source_c.h
lib/bladerf/: CMakeLists.txt  bladerf_common.cc  bladerf_common.h  bladerf_compat.h  bladerf_sink_c.cc  bladerf_sink_c.h  bladerf_source_c.cc  bladerf_source_c.h
lib/fcd/: CMakeLists.txt  fcd_source.cc  fcd_source.h  fcd_source_c.cc  fcd_source_c.h
lib/file/: CMakeLists.txt  file_sink_c.cc  file_sink_c.h  file_source_c.cc  file_source_c.h
lib/freesrp/: CMakeLists.txt  freesrp_common.cc  freesrp_common.h  freesrp_sink_c.cc  freesrp_sink_c.h  freesrp_source_c.cc  freesrp_source_c.h
lib/freesrp/readerwriterqueue/: atomicops.h  readerwriterqueue.h
lib/hackrf/: CMakeLists.txt  hackrf_common.cc  hackrf_common.h  hackrf_open.cc  hackrf_open.h  hackrf_sink_c.cc  hackrf_sink_c.h  hackrf_source_c.cc  hackrf_source_c.h
lib/hydrasdr/: CMakeLists.txt  hydrasdr_fir_kernels.h  hydrasdr_source_c.cc  hydrasdr_source_c.h  hydrasdr_wrapper.h
lib/hydrasdr/testing_filters/poorfilters/: hydrasdr_fir_kernels.new  hydrasdr_source_c.cc.new
lib/miri/: CMakeLists.txt  miri_source_c.cc  miri_source_c.h
lib/netsdr/: CMakeLists.txt  netsdr_source_c.cc  netsdr_source_c.h
lib/osmosdr/: CMakeLists.txt  osmosdr_control.cc  osmosdr_control.h  osmosdr_snk_c.cc  osmosdr_snk_c.h  osmosdr_src_c.cc  osmosdr_src_c.h
lib/pluto/: CMakeLists.txt  pluto_source_c.cc  pluto_source_c.h
lib/redpitaya/: CMakeLists.txt  redpitaya_common.cc  redpitaya_common.h  redpitaya_sink_c.cc  redpitaya_sink_c.h  redpitaya_source_c.cc  redpitaya_source_c.h
lib/rfspace/: CMakeLists.txt  rfspace_source_c.cc  rfspace_source_c.h
lib/rtl/: CMakeLists.txt  rtl_source_c.cc  rtl_source_c.h
lib/rtl_tcp/: CMakeLists.txt  rtl_tcp_source_c.cc  rtl_tcp_source_c.h  rtl_tcp_source_f.cc  rtl_tcp_source_f.h
lib/runtime/: basic_block.cc  block.cc  block_detail.cc  block_executor.cc  block_executor.h  block_registry.cc  buffer.cc  constants.cc.in  feval.cc  flat_flowgraph.cc  flat_flowgraph.h  flowgraph.cc  hier_block2.cc  hier_block2_detail.cc  hier_block2_detail.h  top_block.cc  tpb_thread_body.cc
lib/runtime/blocks/: file_source_impl.h  throttle_impl.cc
lib/runtime/uhd/: usrp_sink_impl.h  usrp_source_impl.h
lib/sdrplay/: CMakeLists.txt  sdrplay_source_c.cc  sdrplay_source_c.h
lib/soapy/: CMakeLists.txt  soapy_common.cc  soapy_common.h  soapy_sink_c.cc  soapy_sink_c.h  soapy_source_c.cc  soapy_source_c.h
lib/uhd/: CMakeLists.txt  uhd_sink_c.cc  uhd_sink_c.h  uhd_source_c.cc  uhd_source_c.h  usrp_sink.h  usrp_sink_impl.cc  usrp_sink_impl.h  usrp_source.h  usrp_source_impl.cc  usrp_source_impl.h
lib/xtrx/: CMakeLists.txt  xtrx_obj.cc  xtrx_obj.h  xtrx_sink_c.cc  xtrx_sink_c.h  xtrx_source_c.cc  xtrx_source_c.h
python/: CMakeLists.txt  __init__.py  wx_gain_panel.py
python/bindings/: CMakeLists.txt  bind_oot_file.py  device_python.cc  python_bindings.cc  ranges_python.cc  sink_python.cc  source_python.cc  time_spec_python.cc
python/bindings/docstrings/: sink_pydoc_template.h  source_pydoc_template.h
swig/: CMakeLists.txt  osmosdr_swig.i
